--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,15 +4,58 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Home</ion-title>
+    <button ion-button menuToggle end>
+      <ion-icon name="exit"></ion-icon>
+    </button>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+<ion-content class="home">
+  <ion-grid>
+    <ion-row>
+        <ion-col>
+          <ion-card>
+            <h1 orange>27</h1>
+            <p>Total Registered Cases</p>
+          </ion-card>
+        </ion-col>
+        <ion-col>
+          <ion-card>
+            <h1>27</h1>
+            <p>Patients in Tratment</p>
+          </ion-card>
+        </ion-col>
+      </ion-row>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+      <ion-row>
+          <ion-col>
+            <ion-card>
+              <h1 orange>27</h1>
+              <p>Discharged Patients</p>
+            </ion-card>
+          </ion-col>
+          <ion-col>
+            <ion-card>
+              <h1 orange>27</h1>
+              <p>Patients in Level 1</p>
+            </ion-card>
+          </ion-col>
+        </ion-row>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+        <ion-row>
+            <ion-col>
+              <ion-card>
+                <h1 orange>27</h1>
+                <p>Patients in Level 2</p>
+              </ion-card>
+            </ion-col>
+            <ion-col>
+              <ion-card>
+                <h1 orange>27</h1>
+                <p>Patients in Level 3</p>
+              </ion-card>
+            </ion-col>
+          </ion-row>
+  </ion-grid>
+  <!-- <button ion-button secondary menuToggle>Toggle Menu</button> -->
 </ion-content>
