--- a/src/pages/admits/admits.html
+++ b/src/pages/admits/admits.html
@@ -15,11 +15,12 @@
     <ion-item *ngFor="let item of items" (click)="itemTapped(item)">
       <ion-icon [name]="item.icon" item-start>
       </ion-icon>
-      <h2>{{item.pname}}</h2>
-      <h3>{{item.pid}}</h3>
-      <h4>{{item.ward}}</h4>
-      <p>{{item.injury}} </p>
-      <ion-note item-end>03/05/2018 <br/> 3:43 pm</ion-note>
+      <h2>{{item.PatientId}}</h2>
+      <h3>{{item.HospitalId}}</h3>
+      <h4>{{item.Ward}}</h4>
+      <p>{{item.Status}} </p>
+      <!-- <ion-note item-end>03/05/2018 <br/> 3:43 pm</ion-note> -->
+      <ion-note item-end>{{item.DateOfAdmission}}</ion-note>
     </ion-item>
   </ion-list>
 
